feat(api): create api create user
